1- build and start script added

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install && peerjs --port 3001",
+    "start": "node server.js & peerjs --port 3001"
   },
   "keywords": [],
   "author": "",
