--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "build": "npm install && peerjs --port 3001",
-    "start": "node server.js & peerjs --port 3001"
+    "build": "npm install ",
+    "start": "node server.js & npm i -g peerjs & peerjs --port 3001"
   },
   "keywords": [],
   "author": "",
