--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "build": "npm install ",
-    "start": "node server.js & npx peerjs --port 3001"
+    "build": "npm install",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
@@ -21,4 +22,3 @@
     "nodemon": "^2.0.4"
   }
 }
-
