--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "build": "npm install",
-    "start": "node server.js"
+    "build": "npm install && npm install -g peerjs",
+    "start": "node server.js "
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "peer": "^1.0.2",
     "socket.io": "^2.3.0",
     "uuid": "^8.1.0"
   },
