--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "peer": "^1.0.2",
     "socket.io": "^2.3.0",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
